Try fixing the problem of hover on iphones

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -396,7 +396,6 @@ a {
   font-weight: 500;
   text-align: left;
   overflow: hidden;
-  word-break: break-all;
   -webkit-transition: all 0.5s ease-out;
   -moz-transition: all 0.5s ease-out;
   -ms-transition: all 0.5s ease-out;
@@ -479,7 +478,7 @@ a {
   width: 100%;
 }
 
-.resume-btn-container:hover .resume-menu {
+.hover-to-show:hover .resume-menu {
   display: block;
 }
 
